Slug behavior changes

--- a/editor/test.html
+++ b/editor/test.html
@@ -29,7 +29,7 @@
 	</p>
 	<p>
 		<input type="text" id="slug" placeholder="Slug" 
-			pattern=".{4,}" data-feature="slug:title" 
+			pattern=".{4,}" data-feature="slug:name=title&max=80" 
 			aria-describedby="slug-desc">
 		<label for="slug">Slug:</label>
 		<span  id="slug-desc" data-validation=". 4 Or more charcters." 
@@ -55,4 +55,5 @@
 <script type="text/javascript" src="editor.js"></script>
 </body>
 </html>
+
 
