Upload parameter adjustment

--- a/editor/test.html
+++ b/editor/test.html
@@ -5,7 +5,7 @@
 <title>Editor test</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body data-feature="droppable:prog=bdrop&prev=filepreview&sign=dropsign&limit=20&form=editorurl=/editor/uploads">
+<body data-feature="droppable:prog=bdrop&prev=filepreview&sign=dropsign&limit=20&form=editor&input=uploads&url=/editor/uploads">
 <header>
 <nav class="links">
 	<ul>
