--- a/editor/upload.html
+++ b/editor/upload.html
@@ -5,7 +5,7 @@
 <title>Uploads test</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body data-feature="droppable:prog=bdrop&prev=filepreview&sign=dropsign&limit=20&form=editor&input=uploads&url=/editor/uploads">
+<body data-feature="droppable:prog=bdrop&prev=filepreview&sign=dropsign&limit=20&form=upform&input=uploads&url=/editor/uploads">
 <header>
 <nav class="links">
 	<ul>
@@ -15,13 +15,14 @@
 </nav>
 </header>
 <main>
-<form action="/uploads" method="post"
+<form id="upform" action="/uploads" method="post"
 	enctype="multipart/form-data">
 	<input type="hidden" name="token" value="">
 	<input type="hidden" name="nonce" value="">
 	<p>
 		<label for="uploads" class="btn upload">New Upload</label>
 		<input type="file" name="uploads[]" id="uploads" multiple />
+		<input type="submit" value="Send" />
 	</p>
 	<progress id="bdrop" value="0" max="100"></progress>
 </form>
